2007-01-19  Ben Smith <jaminben@email.unc.edu>
	- varforce_compute_inst_force: changed all "PULSE" to "VOLTS" because it is a better description of the value.
	varforce_compute_linefit_force: same
	varforce_constants: same
	varforce_init: same
	varforce_remove_buffer_points: same
	varforce_remove_drift: same
	varforce_run: same

2006-12-11  Jeremy Cribb <jcribb@email.unc.edu>
	- varforce_drive_GUI: added.  GUI for running driving code.

	- varforce_drive: added.  driving code for varforce protocol.

	- varforce_constants: added.  script that creates column constants for varforce calibration data matrix.

	- varforce_run: added.  provides a sample function for running varforce calibration from the command line.  also useful in testing varforce code and developing additional analysis tools from the data.  very well commented to explain the protocol.  For now, the analysis GUI runs from this function.
    
	- varforce_init: added.  initializes and loads experimental parameters and video tracked data.  Requires user interaction to define breakpoint between two sequences as the temporal alignment between the driving computer and the video acquisition computer is not very good (needs to be <8ms for pulnix video).  Assigns pulse voltage and sequence ID for each tracker.

	- varforce_remove_drift: added.  finds zero volt regions in each sequence, estimates drift, and subtracts it only from that sequence.  (uses remove_drift in 3dfmAnalysis) 
    
	- varforce_remove_buffer_points: added.  removes a given number of points that surround the shifts in voltage.  This should reduce the crosstalk between voltages as well as preferentially filter out any nonlinear shifts in the tracker position due to loose coils or other mechanical instability.
    
	- varforce_compute_inst_force: added.  compute force using instantaneous velocity method.  Searches for velocities at given voltages and generaes a forcemap for each.  Not completely finished.
