@@ -1,3 +1,7 @@
+2007-02-13  Jeremy Cribb <jcribb@email.unc.edu>
+	- varforce_drive.m: added the comb geometry.
+	- varforge_drive_GUI.fig: same.
+
 2007-01-19  Ben Smith <jaminben@email.unc.edu>
 	- varforce_compute_inst_force: changed all "PULSE" to "VOLTS" because it is a better description of the value.
 	varforce_compute_linefit_force: same
